# ZG_AINotes

./: README.md
demo/mcp_server/search_paper/: README.md  mcp_chatbot_deepseek.py  pyproject.toml  server_config.json  test_hunyuan_tools.py
demo/openapi/: deepseek.py  hunyuan.py
demo/zx_code_review/: README.md  java_cr.py  main.py  pyproject.toml  python_cr.py
demo/zx_code_review/data/: py_sample.py
demo/zx_code_review/outputs/: review_report_py.md
demo/zx_code_review/outputs/java/: java_code_review_Regression.java.json
doc/: prompt_notes.md
tutorial/cc/: app.js  思考.md
tutorial/cc/example/: async_function.js
tutorial/cc/note/: 应用_Security_Review.md  概念_0_异步编程.md  概念_1_Tool设计.md  概念_2_设置与配置.md  概念_3_记忆.md  概念_4_上下文.md  概念_5_Hook系统.md  概念_6_SubAgent与Fork模式.md  概念_7_多智能体.md
tutorial/d2l_notes/: .gitignore  README.md  main.py  pyproject.toml
tutorial/d2l_notes/code/: cp2_1.py  cp2_2.py
tutorial/hello_agent_notes/: Notes.md  cp3_llm.py  pyproject.toml
tutorial/hello_aggents/: Notes.md  cp1_weather.py
