[project]
name = "zx-code-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ast-comments>=1.2.3",
    "hello-agents[all]>=0.2.8",
    "openai>=1.109.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-languages>=1.10.2",
]
