[project]
name = "search-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "arxiv>=2.3.1",
    "mcp>=1.25.0",
    "nest-asyncio>=1.6.0",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
]
